# qrux

./: .gitignore  Cargo.toml  README.md  aoc.qx  let.qx  test.qx  testfile  testing.qx
.cargo/: config.toml
.qrux/: history.txt
demo/: aoc2025-01.qx  binary_tree.qx
qx-src/: aoc.qx  cond.qx  fib.qx  list.qx
src/: env.rs  eval.rs  highlighter.rs  init.lisp  init.qx  lazy.rs  lib.rs  main.rs  print.rs  read.rs  typegrammar.bnf
src/env/: core.rs  ll_core.rs
src/eval/: pat_match.rs
src/read/: expr_macro.rs  stream.rs  types.rs
src/read/types/: cast.rs  closure.rs  kw.rs  test.rs
src/read/types/closure/: args.rs
test/: incA.qx  sum2.qx
~/.qrux/: history.txt
