[package]
name = "qrux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[dependencies]
anyhow = "1.0.83"
colored = "2.1.0"
directories-next = "2.0.0"
ecow = "0.2.2"
im = "15.1.0"
nu-ansi-term = "0.50.0"
reedline = "0.33.0"
regex = "1.10.4"
tap = "1.0.1"
thiserror = "1.0.60"
unescaper = "0.1.4"
